k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-server
spec:
  selector:
    app: violin-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: api
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
